[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Resources/Spritesheet/sheet_tanks.png" type="Texture" id=1]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Resources/PNG/Tanks/barrelRed.png" type="Texture" id=2]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Resources/PNG/Tanks/tankRed.png" type="Texture" id=3]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Resources/PNG/Tanks/barrelBlue.png" type="Texture" id=4]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Resources/PNG/Tanks/tankBlue.png" type="Texture" id=5]
[ext_resource path="res://addons/TypingGameEngine/Scripts/WordController.gd" type="Script" id=6]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Scripts/TanksGameController.gd" type="Script" id=7]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Scripts/Tank.gd" type="Script" id=8]
[ext_resource path="res://addons/TypingGameEngine/Demos/TanksDemo/Scripts/EnemyTank.gd" type="Script" id=9]

[sub_resource type="TileSet" id=1]
0/name = "sheet_tanks.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 384, 352, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "sheet_tanks.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "sheet_tanks.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "sheet_tanks.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 256, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35, 35 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://addons/TypingGameEngine/Fonts/Titillium-BoldItalic.otf"

[sub_resource type="DynamicFont" id=4]
size = 200
font_data = SubResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 1, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 1, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 1, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 1, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0 )

[node name="GameController" type="Node" parent="."]
script = ExtResource( 7 )

[node name="WordController" type="Node" parent="GameController"]
script = ExtResource( 6 )
word_color = Color( 0.270588, 0.0705882, 0.705882, 1 )
word_size = 25

[node name="EnemyTank_1" type="KinematicBody2D" parent="GameController"]
position = Vector2( 808.661, 149.84 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 9 )
word = "Agua"

[node name="EnemyTank" type="Sprite" parent="GameController/EnemyTank_1"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Barrel" type="Sprite" parent="GameController/EnemyTank_1/EnemyTank"]
position = Vector2( 0, -25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameController/EnemyTank_1"]
shape = SubResource( 2 )

[node name="EnemyTank_2" type="KinematicBody2D" parent="GameController"]
position = Vector2( 815.796, 478.061 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 9 )
word = "cosa"

[node name="EnemyTank2" type="Sprite" parent="GameController/EnemyTank_2"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Barrel" type="Sprite" parent="GameController/EnemyTank_2/EnemyTank2"]
position = Vector2( 0, -25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameController/EnemyTank_2"]
shape = SubResource( 2 )

[node name="PlayerTank" type="KinematicBody2D" parent="GameController"]
position = Vector2( 161.732, 310.383 )
collision_mask = 6
script = ExtResource( 8 )

[node name="Tank" type="Sprite" parent="GameController/PlayerTank"]
rotation = 1.5708
texture = ExtResource( 5 )

[node name="Barrel" type="Sprite" parent="GameController/PlayerTank/Tank"]
position = Vector2( 0, -25 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameController/PlayerTank"]
shape = SubResource( 2 )

[node name="GameOverLabel" type="Label" parent="GameController"]
visible = false
margin_left = 17.9594
margin_top = 186.329
margin_right = 987.959
margin_bottom = 460.329
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.733333, 0.121569, 0.121569, 1 )
text = "Game Over"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
